# FedEx

./: .gitignore  CMakeLists.txt  CMakeSettings.json  DataConverter.cpp  DataConverter.h  DataHandler.cpp  DataHandler.h  DataToMat.cpp  DataToMat.h  LinuxSerial.cpp  LinuxSerial.h  Reader.cpp  Reader.h  SerialCommunication.cpp  SerialCommunication.h  UARTConnection.cpp  UARTConnection.h  UiMainWindow.cpp  UiMainWindow.h  main.cpp
